# waves

./: .gitignore  .midi_state.json  CHANGES_SUMMARY.txt  IMPLEMENTATION_SUMMARY.txt  PARAMETER_PATH_IDS.md  PERFORMANCE_ENHANCEMENTS.md  README.md  REALTIME_RECORDING.md  START_HERE.md  audio_interfaces.py  config.py  constants.py  display_stats.py  expression_globals.py  install  list_midi_devices.py  models.py  nodes.py  play  pyproject.toml  requirements.txt  sound_library.py  utils.py  waves.py  waves.yaml
.github/: copilot-instructions.md
docs/: HOT_RELOAD_AND_AUTO_ID_GUIDE.md  HOT_RELOAD_PLAN.md  IMPLEMENTATION_COMPLETE.md
instructions/: DOLLAR_SYNTAX.md  EXPRESSION_SYSTEM.md  HIERARCHICAL_AUTO_IDS.md  HOT_RELOAD_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  NODE_STRING_NOTATION.md  PARAMETER_PATH_IDS.md  PARAMETER_PATH_IMPLEMENTATION_SUMMARY.txt  STATEFUL_NODES_UPDATE.md
models/: models.py  sound_library.py  sound_library_model.py
nodes/: MIDI_CC_README.md  MIDI_README.md  automation.py  base_node.py  buffer.py  context.py  delay-interesting-bug-2.py_  delay-interesting-bug-3.py_  delay-interesting-bug-4.py_  delay-interesting-bug.py_  delay.py  delay_node.py  envelope.py  expression.py  expression_globals.py  filter.py  follow.py  glide.py  hold.py  input.py  instantiate_node.py  interval.py  invert.py  map.py  midi.py  midi_cc.py  midi_in.py  midi_out.py  mix.py  multiply.py  normalise.py  oscillator.py  oscillator_node.py  pitch.py  pitch2.py  reference.py  retrigger.py  sample copy.py  sample-relative-playhead.py  sample.py  (+14 more)
sounds/: drums.yaml  (+13 more)
(+22 files in other folders)
