[project]
name = "waves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "keyboard==0.13.5",
    "mido==1.3.3",
    "numpy==1.26.4",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-rtmidi==1.5.8",
    "pyyaml==6.0.2",
    "scipy==1.15.2",
    "setuptools==75.8.0",
    "sounddevice==0.5.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "vnoise==0.1.0",
]
